Bug 341141 - Application Menu - Forget Application action does not work properly
Summary: Application Menu - Forget Application action does not work properly
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Menu (Kicker) widget (other bugs)
Version First Reported In: 5.1.1
Platform: Kubuntu Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-11-20 23:12 UTC by André Marcelo Alvarenga
Modified: 2017-02-22 17:37 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screencast (385.66 KB, video/x-msvideo)
2014-11-20 23:13 UTC, André Marcelo Alvarenga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description André Marcelo Alvarenga 2014-11-20 23:12:40 UTC
1. Go to Recent Application menu
2. Right click and choose Forget Application action

I'have recorded a screencast with the problem.

Reproducible: Always
Comment 1 André Marcelo Alvarenga 2014-11-20 23:13:25 UTC
Created attachment 89656 [details]
Screencast
Comment 2 Eike Hein 2014-11-21 18:36:15 UTC
Thanks for your report!
Comment 3 Eike Hein 2014-11-21 18:37:02 UTC
Git commit 0c5aaf2f6e82b1acdaf3586a7471f8f390e99873 by Eike Hein.
Committed on 21/11/2014 at 18:35.
Pushed by hein into branch 'Plasma/5.1'.

Fix 'Forget App' in Recent Apps not working immediately.

M  +26   -0    applets/kicker/plugin/funnelmodel.cpp
M  +4    -0    applets/kicker/plugin/funnelmodel.h

http://commits.kde.org/plasma-desktop/0c5aaf2f6e82b1acdaf3586a7471f8f390e99873