Fix 'Forget App' in Recent Apps not working immediately.

BUG:341141